--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+/**
+  .scroll-content{
+    background: url('../../assets/imgs/background/background_home.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+**/
