--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
 
+  .toolbar-background {
+    background-color: rgba(0, 0, 0, 0) !important;
+  }
+
+  .content{
+    background-color: #2c3e50 !important;
+  }
+
+  h1, h2, button, .toolbar-title{
+    color: #ecf0f1 !important;
+  }
+
+  .item{
+    margin-bottom: 5px !important;
+  }
+
 }
